# RPC-Based_Proxy_Server

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hello_world.thrift  proxy_server.thrift  run_client.sh
cache_implementation/: BaseCache.cpp  BaseCache.h  FifoCache.cpp  FifoCache.h  MaxsCache.cpp  MaxsCache.h  RandomCache.cpp  RandomCache.h  Tuple.h
gen-cpp/: client.cpp  hello_world.cpp  hello_world.h  hello_world_constants.cpp  hello_world_constants.h  hello_world_server.skeleton.cpp  hello_world_types.cpp  hello_world_types.h  proxy_server.cpp  proxy_server.h  proxy_server_constants.cpp  proxy_server_constants.h  proxy_server_server.skeleton.cpp  proxy_server_types.cpp  proxy_server_types.h
test_cases/: 1_fifo_1024.txt  1_fifo_1280.txt  1_fifo_1536.txt  1_fifo_1792.txt  1_fifo_2048.txt  1_maxs_1024.txt  1_maxs_1280.txt  1_maxs_1536.txt  1_maxs_1792.txt  1_maxs_2048.txt  1_random_1024.txt  1_random_1280.txt  1_random_1536.txt  1_random_1792.txt  1_random_2048.txt  2_fifo_1024.txt  2_fifo_1280.txt  2_fifo_1536.txt  2_fifo_1792.txt  2_fifo_2048.txt  2_maxs_1024.txt  2_maxs_1280.txt  2_maxs_1536.txt  2_maxs_1792.txt  2_maxs_2048.txt  2_random_1024.txt  2_random_1280.txt  2_random_1536.txt  2_random_1792.txt  2_random_2048.txt
